[Q4] Add endpoint for creating new Players.
